Added authorization for getting pads
